antlr4/exprParser.cpp

// Generated from expr.g4 by ANTLR 4.7.1


#include "exprVisitor.h"

#include "exprParser.h"


using namespace antlrcpp;
using namespace antlr4;

exprParser::exprParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

exprParser::~exprParser() {
  delete _interpreter;
}

std::string exprParser::getGrammarFileName() const {
  return "expr.g4";
}

const std::vector<std::string>& exprParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& exprParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- FichierContext ------------------------------------------------------------------

exprParser::FichierContext::FichierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

exprParser::ProgrammeContext* exprParser::FichierContext::programme() {
  return getRuleContext<exprParser::ProgrammeContext>(0);
}


size_t exprParser::FichierContext::getRuleIndex() const {
  return exprParser::RuleFichier;
}

antlrcpp::Any exprParser::FichierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprVisitor*>(visitor))
    return parserVisitor->visitFichier(this);
  else
    return visitor->visitChildren(this);
}

exprParser::FichierContext* exprParser::fichier() {
  FichierContext *_localctx = _tracker.createInstance<FichierContext>(_ctx, getState());
  enterRule(_localctx, 0, exprParser::RuleFichier);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(34);
    programme();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgrammeContext ------------------------------------------------------------------

exprParser::ProgrammeContext::ProgrammeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t exprParser::ProgrammeContext::getRuleIndex() const {
  return exprParser::RuleProgramme;
}

void exprParser::ProgrammeContext::copyFrom(ProgrammeContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- FctMultContext ------------------------------------------------------------------

exprParser::FunctionContext* exprParser::FctMultContext::function() {
  return getRuleContext<exprParser::FunctionContext>(0);
}

exprParser::ProgrammeContext* exprParser::FctMultContext::programme() {
  return getRuleContext<exprParser::ProgrammeContext>(0);
}

exprParser::FctMultContext::FctMultContext(ProgrammeContext *ctx) { copyFrom(ctx); }

antlrcpp::Any exprParser::FctMultContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprVisitor*>(visitor))
    return parserVisitor->visitFctMult(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FctUniqueContext ------------------------------------------------------------------

exprParser::FunctionContext* exprParser::FctUniqueContext::function() {
  return getRuleContext<exprParser::FunctionContext>(0);
}

exprParser::FctUniqueContext::FctUniqueContext(ProgrammeContext *ctx) { copyFrom(ctx); }

antlrcpp::Any exprParser::FctUniqueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprVisitor*>(visitor))
    return parserVisitor->visitFctUnique(this);
  else
    return visitor->visitChildren(this);
}
exprParser::ProgrammeContext* exprParser::programme() {
  ProgrammeContext *_localctx = _tracker.createInstance<ProgrammeContext>(_ctx, getState());
  enterRule(_localctx, 2, exprParser::RuleProgramme);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(40);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<ProgrammeContext *>(_tracker.createInstance<exprParser::FctMultContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(36);
      function();
      setState(37);
      programme();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<ProgrammeContext *>(_tracker.createInstance<exprParser::FctUniqueContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(39);
      function();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AppelContext ------------------------------------------------------------------

exprParser::AppelContext::AppelContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t exprParser::AppelContext::getRuleIndex() const {
  return exprParser::RuleAppel;
}

void exprParser::AppelContext::copyFrom(AppelContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- AppelFuncAvecParamContext ------------------------------------------------------------------

tree::TerminalNode* exprParser::AppelFuncAvecParamContext::ID() {
  return getToken(exprParser::ID, 0);
}

exprParser::VarsContext* exprParser::AppelFuncAvecParamContext::vars() {
  return getRuleContext<exprParser::VarsContext>(0);
}

exprParser::AppelFuncAvecParamContext::AppelFuncAvecParamContext(AppelContext *ctx) { copyFrom(ctx); }

antlrcpp::Any exprParser::AppelFuncAvecParamContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprVisitor*>(visitor))
    return parserVisitor->visitAppelFuncAvecParam(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AppelFuncSansParamContext ------------------------------------------------------------------

tree::TerminalNode* exprParser::AppelFuncSansParamContext::ID() {
  return getToken(exprParser::ID, 0);
}

exprParser::AppelFuncSansParamContext::AppelFuncSansParamContext(AppelContext *ctx) { copyFrom(ctx); }

antlrcpp::Any exprParser::AppelFuncSansParamContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprVisitor*>(visitor))
    return parserVisitor->visitAppelFuncSansParam(this);
  else
    return visitor->visitChildren(this);
}
exprParser::AppelContext* exprParser::appel() {
  AppelContext *_localctx = _tracker.createInstance<AppelContext>(_ctx, getState());
  enterRule(_localctx, 4, exprParser::RuleAppel);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(50);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<AppelContext *>(_tracker.createInstance<exprParser::AppelFuncSansParamContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(42);
      match(exprParser::ID);
      setState(43);
      match(exprParser::T__0);
      setState(44);
      match(exprParser::T__1);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<AppelContext *>(_tracker.createInstance<exprParser::AppelFuncAvecParamContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(45);
      match(exprParser::ID);
      setState(46);
      match(exprParser::T__0);
      setState(47);
      vars();
      setState(48);
      match(exprParser::T__1);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarsContext ------------------------------------------------------------------

exprParser::VarsContext::VarsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t exprParser::VarsContext::getRuleIndex() const {
  return exprParser::RuleVars;
}

void exprParser::VarsContext::copyFrom(VarsContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ParamUniqueContext ------------------------------------------------------------------

exprParser::ExpressionContext* exprParser::ParamUniqueContext::expression() {
  return getRuleContext<exprParser::ExpressionContext>(0);
}

exprParser::ParamUniqueContext::ParamUniqueContext(VarsContext *ctx) { copyFrom(ctx); }

antlrcpp::Any exprParser::ParamUniqueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprVisitor*>(visitor))
    return parserVisitor->visitParamUnique(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ParamMultContext ------------------------------------------------------------------

exprParser::ExpressionContext* exprParser::ParamMultContext::expression() {
  return getRuleContext<exprParser::ExpressionContext>(0);
}

exprParser::VarsContext* exprParser::ParamMultContext::vars() {
  return getRuleContext<exprParser::VarsContext>(0);
}

exprParser::ParamMultContext::ParamMultContext(VarsContext *ctx) { copyFrom(ctx); }

antlrcpp::Any exprParser::ParamMultContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprVisitor*>(visitor))
    return parserVisitor->visitParamMult(this);
  else
    return visitor->visitChildren(this);
}
exprParser::VarsContext* exprParser::vars() {
  VarsContext *_localctx = _tracker.createInstance<VarsContext>(_ctx, getState());
  enterRule(_localctx, 6, exprParser::RuleVars);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(57);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<VarsContext *>(_tracker.createInstance<exprParser::ParamUniqueContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(52);
      expression(0);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<VarsContext *>(_tracker.createInstance<exprParser::ParamMultContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(53);
      expression(0);
      setState(54);
      match(exprParser::T__2);
      setState(55);
      vars();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionContext ------------------------------------------------------------------

exprParser::FunctionContext::FunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t exprParser::FunctionContext::getRuleIndex() const {
  return exprParser::RuleFunction;
}

void exprParser::FunctionContext::copyFrom(FunctionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- FctSansParamContext ------------------------------------------------------------------

exprParser::TypefctContext* exprParser::FctSansParamContext::typefct() {
  return getRuleContext<exprParser::TypefctContext>(0);
}

tree::TerminalNode* exprParser::FctSansParamContext::ID() {
  return getToken(exprParser::ID, 0);
}

exprParser::CorpsContext* exprParser::FctSansParamContext::corps() {
  return getRuleContext<exprParser::CorpsContext>(0);
}

exprParser::FctSansParamContext::FctSansParamContext(FunctionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any exprParser::FctSansParamContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprVisitor*>(visitor))
    return parserVisitor->visitFctSansParam(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FctContext ------------------------------------------------------------------

exprParser::TypefctContext* exprParser::FctContext::typefct() {
  return getRuleContext<exprParser::TypefctContext>(0);
}

tree::TerminalNode* exprParser::FctContext::ID() {
  return getToken(exprParser::ID, 0);
}

exprParser::DefAppelContext* exprParser::FctContext::defAppel() {
  return getRuleContext<exprParser::DefAppelContext>(0);
}

exprParser::CorpsContext* exprParser::FctContext::corps() {
  return getRuleContext<exprParser::CorpsContext>(0);
}

exprParser::FctContext::FctContext(FunctionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any exprParser::FctContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprVisitor*>(visitor))
    return parserVisitor->visitFct(this);
  else
    return visitor->visitChildren(this);
}
exprParser::FunctionContext* exprParser::function() {
  FunctionContext *_localctx = _tracker.createInstance<FunctionContext>(_ctx, getState());
  enterRule(_localctx, 8, exprParser::RuleFunction);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(76);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<FunctionContext *>(_tracker.createInstance<exprParser::FctContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(59);
      typefct();
      setState(60);
      match(exprParser::ID);
      setState(61);
      match(exprParser::T__0);
      setState(62);
      defAppel();
      setState(63);
      match(exprParser::T__1);
      setState(64);
      match(exprParser::T__3);
      setState(65);
      corps();
      setState(66);
      match(exprParser::T__4);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<FunctionContext *>(_tracker.createInstance<exprParser::FctSansParamContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(68);
      typefct();
      setState(69);
      match(exprParser::ID);
      setState(70);
      match(exprParser::T__0);
      setState(71);
      match(exprParser::T__1);
      setState(72);
      match(exprParser::T__3);
      setState(73);
      corps();
      setState(74);
      match(exprParser::T__4);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DefAppelContext ------------------------------------------------------------------

exprParser::DefAppelContext::DefAppelContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t exprParser::DefAppelContext::getRuleIndex() const {
  return exprParser::RuleDefAppel;
}

void exprParser::DefAppelContext::copyFrom(DefAppelContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- DefParamMultContext ------------------------------------------------------------------

exprParser::TypeContext* exprParser::DefParamMultContext::type() {
  return getRuleContext<exprParser::TypeContext>(0);
}

tree::TerminalNode* exprParser::DefParamMultContext::ID() {
  return getToken(exprParser::ID, 0);
}

exprParser::DefAppelContext* exprParser::DefParamMultContext::defAppel() {
  return getRuleContext<exprParser::DefAppelContext>(0);
}

exprParser::DefParamMultContext::DefParamMultContext(DefAppelContext *ctx) { copyFrom(ctx); }

antlrcpp::Any exprParser::DefParamMultContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprVisitor*>(visitor))
    return parserVisitor->visitDefParamMult(this);
  else
    return visitor->visitChildren(this);
}
//----------------- DefParamUniqueContext ------------------------------------------------------------------

exprParser::TypeContext* exprParser::DefParamUniqueContext::type() {
  return getRuleContext<exprParser::TypeContext>(0);
}

tree::TerminalNode* exprParser::DefParamUniqueContext::ID() {
  return getToken(exprParser::ID, 0);
}

exprParser::DefParamUniqueContext::DefParamUniqueContext(DefAppelContext *ctx) { copyFrom(ctx); }

antlrcpp::Any exprParser::DefParamUniqueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprVisitor*>(visitor))
    return parserVisitor->visitDefParamUnique(this);
  else
    return visitor->visitChildren(this);
}
exprParser::DefAppelContext* exprParser::defAppel() {
  DefAppelContext *_localctx = _tracker.createInstance<DefAppelContext>(_ctx, getState());
  enterRule(_localctx, 10, exprParser::RuleDefAppel);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(86);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<DefAppelContext *>(_tracker.createInstance<exprParser::DefParamUniqueContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(78);
      type();
      setState(79);
      match(exprParser::ID);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<DefAppelContext *>(_tracker.createInstance<exprParser::DefParamMultContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(81);
      type();
      setState(82);
      match(exprParser::ID);
      setState(83);
      match(exprParser::T__2);
      setState(84);
      defAppel();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypefctContext ------------------------------------------------------------------

exprParser::TypefctContext::TypefctContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t exprParser::TypefctContext::getRuleIndex() const {
  return exprParser::RuleTypefct;
}

void exprParser::TypefctContext::copyFrom(TypefctContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- RetourIntContext ------------------------------------------------------------------

tree::TerminalNode* exprParser::RetourIntContext::INT() {
  return getToken(exprParser::INT, 0);
}

exprParser::RetourIntContext::RetourIntContext(TypefctContext *ctx) { copyFrom(ctx); }

antlrcpp::Any exprParser::RetourIntContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprVisitor*>(visitor))
    return parserVisitor->visitRetourInt(this);
  else
    return visitor->visitChildren(this);
}
//----------------- RetourVoidContext ------------------------------------------------------------------

tree::TerminalNode* exprParser::RetourVoidContext::VOID() {
  return getToken(exprParser::VOID, 0);
}

exprParser::RetourVoidContext::RetourVoidContext(TypefctContext *ctx) { copyFrom(ctx); }

antlrcpp::Any exprParser::RetourVoidContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprVisitor*>(visitor))
    return parserVisitor->visitRetourVoid(this);
  else
    return visitor->visitChildren(this);
}
exprParser::TypefctContext* exprParser::typefct() {
  TypefctContext *_localctx = _tracker.createInstance<TypefctContext>(_ctx, getState());
  enterRule(_localctx, 12, exprParser::RuleTypefct);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(90);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case exprParser::INT: {
        _localctx = dynamic_cast<TypefctContext *>(_tracker.createInstance<exprParser::RetourIntContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(88);
        match(exprParser::INT);
        break;
      }

      case exprParser::VOID: {
        _localctx = dynamic_cast<TypefctContext *>(_tracker.createInstance<exprParser::RetourVoidContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(89);
        match(exprParser::VOID);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

exprParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t exprParser::TypeContext::getRuleIndex() const {
  return exprParser::RuleType;
}

void exprParser::TypeContext::copyFrom(TypeContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- TypeVarCharContext ------------------------------------------------------------------

tree::TerminalNode* exprParser::TypeVarCharContext::CHAR() {
  return getToken(exprParser::CHAR, 0);
}

exprParser::TypeVarCharContext::TypeVarCharContext(TypeContext *ctx) { copyFrom(ctx); }

antlrcpp::Any exprParser::TypeVarCharContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprVisitor*>(visitor))
    return parserVisitor->visitTypeVarChar(this);
  else
    return visitor->visitChildren(this);
}
//----------------- TypeVarIntContext ------------------------------------------------------------------

tree::TerminalNode* exprParser::TypeVarIntContext::INT() {
  return getToken(exprParser::INT, 0);
}

exprParser::TypeVarIntContext::TypeVarIntContext(TypeContext *ctx) { copyFrom(ctx); }

antlrcpp::Any exprParser::TypeVarIntContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprVisitor*>(visitor))
    return parserVisitor->visitTypeVarInt(this);
  else
    return visitor->visitChildren(this);
}
exprParser::TypeContext* exprParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 14, exprParser::RuleType);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(94);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case exprParser::INT: {
        _localctx = dynamic_cast<TypeContext *>(_tracker.createInstance<exprParser::TypeVarIntContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(92);
        match(exprParser::INT);
        break;
      }

      case exprParser::CHAR: {
        _localctx = dynamic_cast<TypeContext *>(_tracker.createInstance<exprParser::TypeVarCharContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(93);
        match(exprParser::CHAR);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RightContext ------------------------------------------------------------------

exprParser::RightContext::RightContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t exprParser::RightContext::getRuleIndex() const {
  return exprParser::RuleRight;
}

void exprParser::RightContext::copyFrom(RightContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- RightValueIDContext ------------------------------------------------------------------

tree::TerminalNode* exprParser::RightValueIDContext::ID() {
  return getToken(exprParser::ID, 0);
}

exprParser::RightValueIDContext::RightValueIDContext(RightContext *ctx) { copyFrom(ctx); }

antlrcpp::Any exprParser::RightValueIDContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprVisitor*>(visitor))
    return parserVisitor->visitRightValueID(this);
  else
    return visitor->visitChildren(this);
}
//----------------- RightValueNBRContext ------------------------------------------------------------------

tree::TerminalNode* exprParser::RightValueNBRContext::NBR() {
  return getToken(exprParser::NBR, 0);
}

exprParser::RightValueNBRContext::RightValueNBRContext(RightContext *ctx) { copyFrom(ctx); }

antlrcpp::Any exprParser::RightValueNBRContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprVisitor*>(visitor))
    return parserVisitor->visitRightValueNBR(this);
  else
    return visitor->visitChildren(this);
}
//----------------- RightValueCHARContext ------------------------------------------------------------------

tree::TerminalNode* exprParser::RightValueCHARContext::CARACTERE() {
  return getToken(exprParser::CARACTERE, 0);
}

exprParser::RightValueCHARContext::RightValueCHARContext(RightContext *ctx) { copyFrom(ctx); }

antlrcpp::Any exprParser::RightValueCHARContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprVisitor*>(visitor))
    return parserVisitor->visitRightValueCHAR(this);
  else
    return visitor->visitChildren(this);
}
exprParser::RightContext* exprParser::right() {
  RightContext *_localctx = _tracker.createInstance<RightContext>(_ctx, getState());
  enterRule(_localctx, 16, exprParser::RuleRight);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(99);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case exprParser::ID: {
        _localctx = dynamic_cast<RightContext *>(_tracker.createInstance<exprParser::RightValueIDContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(96);
        match(exprParser::ID);
        break;
      }

      case exprParser::NBR: {
        _localctx = dynamic_cast<RightContext *>(_tracker.createInstance<exprParser::RightValueNBRContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(97);
        match(exprParser::NBR);
        break;
      }

      case exprParser::CARACTERE: {
        _localctx = dynamic_cast<RightContext *>(_tracker.createInstance<exprParser::RightValueCHARContext>(_localctx));
        enterOuterAlt(_localctx, 3);
        setState(98);
        match(exprParser::CARACTERE);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

exprParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t exprParser::ExpressionContext::getRuleIndex() const {
  return exprParser::RuleExpression;
}

void exprParser::ExpressionContext::copyFrom(ExpressionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ExprNegContext ------------------------------------------------------------------

exprParser::ExpressionContext* exprParser::ExprNegContext::expression() {
  return getRuleContext<exprParser::ExpressionContext>(0);
}

exprParser::ExprNegContext::ExprNegContext(ExpressionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any exprParser::ExprNegContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprVisitor*>(visitor))
    return parserVisitor->visitExprNeg(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprParContext ------------------------------------------------------------------

exprParser::ExpressionContext* exprParser::ExprParContext::expression() {
  return getRuleContext<exprParser::ExpressionContext>(0);
}

exprParser::ExprParContext::ExprParContext(ExpressionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any exprParser::ExprParContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprVisitor*>(visitor))
    return parserVisitor->visitExprPar(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprAppContext ------------------------------------------------------------------

exprParser::AppelContext* exprParser::ExprAppContext::appel() {
  return getRuleContext<exprParser::AppelContext>(0);
}

exprParser::ExprAppContext::ExprAppContext(ExpressionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any exprParser::ExprAppContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprVisitor*>(visitor))
    return parserVisitor->visitExprApp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprAddContext ------------------------------------------------------------------

std::vector<exprParser::ExpressionContext *> exprParser::ExprAddContext::expression() {
  return getRuleContexts<exprParser::ExpressionContext>();
}

exprParser::ExpressionContext* exprParser::ExprAddContext::expression(size_t i) {
  return getRuleContext<exprParser::ExpressionContext>(i);
}

exprParser::ExprAddContext::ExprAddContext(ExpressionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any exprParser::ExprAddContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprVisitor*>(visitor))
    return parserVisitor->visitExprAdd(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprMinusContext ------------------------------------------------------------------

std::vector<exprParser::ExpressionContext *> exprParser::ExprMinusContext::expression() {
  return getRuleContexts<exprParser::ExpressionContext>();
}

exprParser::ExpressionContext* exprParser::ExprMinusContext::expression(size_t i) {
  return getRuleContext<exprParser::ExpressionContext>(i);
}

exprParser::ExprMinusContext::ExprMinusContext(ExpressionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any exprParser::ExprMinusContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprVisitor*>(visitor))
    return parserVisitor->visitExprMinus(this);
  else
    return visitor->visitChildren(this);
}
//----------------- RightValueContext ------------------------------------------------------------------

exprParser::RightContext* exprParser::RightValueContext::right() {
  return getRuleContext<exprParser::RightContext>(0);
}

exprParser::RightValueContext::RightValueContext(ExpressionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any exprParser::RightValueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprVisitor*>(visitor))
    return parserVisitor->visitRightValue(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprMultContext ------------------------------------------------------------------

std::vector<exprParser::ExpressionContext *> exprParser::ExprMultContext::expression() {
  return getRuleContexts<exprParser::ExpressionContext>();
}

exprParser::ExpressionContext* exprParser::ExprMultContext::expression(size_t i) {
  return getRuleContext<exprParser::ExpressionContext>(i);
}

exprParser::ExprMultContext::ExprMultContext(ExpressionContext *ctx) { copyFrom(ctx); }

antlrcpp::Any exprParser::ExprMultContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<exprVisitor*>(visitor))
    return parserVisitor->visitExprMult(this);
  else
    return visitor->visitChildren(this);
}

exprParser::ExpressionContext* exprParser::expression() {
   return expression(0);
}

exprParser::ExpressionContext* exprParser::expression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  exprParser::ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, parentState);
  exprParser::ExpressionContext *previousContext = _localctx;
  size_t startState = 18;
  enterRecursionRule(_localctx, 18, exprParser::RuleExpression, precedence);

    
